--- a/public/style.css
+++ b/public/style.css
@@ -1,10 +1,17 @@
 html, body {
     height: 100%;
     text-align: center;
+    background: black;
+    color: white;
+    margin: 0;
+
 }
 body{
-    margin: 0 auto;
-    width: 80%;
+    /*margin: 0 auto;*/
+    /*width: 80%;*/
+    background-image: url("img/open-curtain.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 header{
     margin-top: 1em;
@@ -33,6 +40,8 @@ header{
     display: inline-block;
     width: 15em;
     margin: 1em;
+    /*background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(253,29,29,1) 50%, rgba(0,0,0,1) 100%);*/
+    background: linear-gradient(0deg, rgba(0,0,0,0.9570203081232493) 0%, rgba(253,29,29,0.9178046218487395) 50%, rgba(0,0,0,1) 100%);
 }
 .card-body{
     /*height: 10em;*/
